@@ -1,6 +1,7 @@
 2.0b4 (TBD)
 ------------------
 - add rio_tiler.io.base.BaseReader abstract class for COGReader and STACReader to inherit from
+- STACReader raises `InvalidAssetName` for invalid asset name or `MissingAssets` when no assets is passed (#208)
 - update rio_tiler.mosaic.reader.mosaic_reader to not use threadPool if threads <= 1 (#207)
 
 Breaking Changes:
